--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,4 +6,9 @@
 
 <h1>{{ page.title }}</h1>
 
-{{ content }}
+   <nav class="contents">
+   </nav>
+
+   {{ content }}
+
+<script src="/assets/js/toc.js"></script>
