Final tweaks to media queries

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -37,10 +37,10 @@ body {
       line-height: 1.6;
 }
    @include for-tablet-portrait-up {
-      width: 100%;
+      width: 90%;
    }
    @include for-tablet-landscape-up {
-      width: 90%;
+      width: 80%;
    }
    @include for-desktop-up {
       width: 65%;
@@ -73,7 +73,7 @@ footer {
       padding: 2rem;
       border: 0;
       border-radius: 0;
-      box-shadow: 0;
+      box-shadow: none;
    }
 }
 
