--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -152,7 +152,9 @@ h2 {
 h3 {
    font-size: $fontsize-h3;
    font-variant: small-caps;
-   padding: 0.71em 0 0.9em 3em;
+   margin: 0.71em 0 0.9em 0;
+   padding-left: 1em;
+   border-left: 1em solid #ebd6d6;
 }
 
 a,
@@ -229,6 +231,7 @@ dd {
 
 img {
    border: 0;
+   max-width: 100%;
 }
 
 figure {}
@@ -353,7 +356,9 @@ kbd {
 pre {
    padding: 1em;
    margin-bottom: 1.75em;
-   white-space: pre-wrap;
+//   white-space: pre-wrap;
+
+   overflow-x: scroll;
 
    background-color: $color-code_background;
    color: $color-code_text;
